--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -1701,7 +1701,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src='/workspaces/Template-Bootcamp/data/Inputs/Images/matriz_confusion.png' width=\"350\" height=\"250\" />\n",
+    "<img src='https://github.com/jofepe16/Template-Bootcamp/blob/main/data/Inputs/Images/matriz_confusion.png?raw=tru' width=\"350\" height=\"250\" />\n",
     "<figcaption></figcaption></center>\n",
     "</figure>\n",
     "\n",
@@ -2245,10 +2245,9 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src='/workspaces/Template-Bootcamp/data/Inputs/Images/Train_test.png' width=\"750\" height=\"250\" />\n",
+    "<img src='https://github.com/jofepe16/Template-Bootcamp/blob/main/data/Inputs/Images/Train_test.png?raw=true' width=\"750\" height=\"250\" />\n",
     "<figcaption></figcaption></center>\n",
     "</figure>\n",
-    "\n",
     "\n",
     " 1. **Clientes (Base de Datos)**: Es como una lista de todos tus clientes. Cada cliente tiene información sobre si han cancelado el servicio (churn) o no.\n",
     "\n",
@@ -3670,7 +3669,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src='/workspaces/Template-Bootcamp/data/Inputs/Images/random_forest_2.png' width=\"550\" height=\"250\" />\n",
+    "<img src='https://github.com/jofepe16/Template-Bootcamp/blob/main/data/Inputs/Images/random_forest_2.png?raw=tru' width=\"550\" height=\"250\" />\n",
     "<figcaption></figcaption></center>\n",
     "</figure>\n",
     "\n",
