test_train_data

--- a/notebooks/visualizaciones.ipynb
+++ b/notebooks/visualizaciones.ipynb
@@ -2,22 +2,63 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d36354a",
-   "metadata": {
-    "papermill": {
-     "duration": 0.017105,
-     "end_time": "2024-02-13T04:16:02.845631",
-     "exception": false,
-     "start_time": "2024-02-13T04:16:02.828526",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "id": "01f272cd",
+   "metadata": {},
    "source": [
-    "# <span style=\"color: #007BFF; font-size: 24px; font-weight: bold;\">➡️ Welcome to Data Visualization</span>\n",
+    "# <span style=\"color: #007BFF; font-size: 24px; font-weight: bold;\">Bienvenidos al Bootcamp Data Science & Analítica de Datos I - RMS TITANIC </span>\n",
     "<div style=\"font-family: 'Arial', sans-serif; font-size: 16px; line-height: 1.6; color: #333;\">\n",
-    "In this hands-on course, you'll learn how to take your data visualizations to the next level with seaborn, a powerful but easy-to-use data visualization tool. To use seaborn, you'll also learn a bit about how to write code in Python, a popular programming language.</div>"
+    "\n",
+    "El ****[RMS Titanic](https://es.wikipedia.org/wiki/RMS_Titanic)**** fue un transatlántico británico, el mayor barco de pasajeros del mundo al finalizar su construcción, naufragó en las aguas del océano Atlántico durante la noche del 14 y la madrugada del 15 de abril de 1912, mientras realizaba su viaje inaugural desde Southampton a Nueva York, tras chocar con un iceberg. En el hundimiento murieron 1496 personas de las 2208 que iban a bordo, lo que convierte a esta catástrofe en uno de los naufragios más mortales de la historia ocurridos en tiempos de paz.\n",
+    "\n",
+    "Este desastre marítimo es un ejemplo clásico que ha sido ampliamente estudiado para entender cómo diversos factores contribuyeron a la probabilidad de supervivencia de las personas a bordo. El Titanic era un lujoso transatlántico que se consideraba \"insumergible\", pero se hundió en su viaje inaugural después de chocar con un iceberg en el Atlántico Norte. De los 2,224 pasajeros y tripulantes a bordo, solo 706 sobrevivieron.\n",
+    "\n",
+    "**¿Cómo podría haber ayudado la IA?**\n",
+    "\n",
+    "Imagina que se hubiera contado con tecnologías de inteligencia artificial (IA) avanzadas como las que tenemos hoy en día. Estas tecnologías podrían haber marcado una diferencia significativa en varios aspectos:\n",
+    "\n",
+    " * **Prevención de Desastres** - Detección de Icebergs: Un sistema de IA podría haber analizado en tiempo real datos meteorológicos, temperatura del agua, y patrones de hielo para predecir la presencia de icebergs en la ruta del Titanic. Los modelos predictivos podrían haber aler\n",
+    " tado a la tripulación con anticipación, permitiendo cambiar la ruta o reducir la velocidad.\n",
+    " \n",
+    " * **Mejor Gestión de la Evacuación** - Optimización de la Capacidad de los Botes Salvavidas: La IA podría haber calculado la manera más eficiente de llenar los botes salvavidas, asegurando que cada bote se utilizara a su máxima capacidad. Esto podría haber aumentado el número de personas rescatadas.\n",
+    "\n",
+    "* **Priorización Basada en Factores de Riesgo** - Identificación de Grupos Vulnerables: Usando un modelo de clasificación similar al que estás desarrollando, una IA podría haber priorizado la evacuación de personas más vulnerables, como mujeres, niños y personas mayores, basándose en factores como la ubicación a bordo, la salud, y la posibilidad de acceso rápido a los botes salvavidas.\n",
+    "\n",
+    "* **Coordinación de Rescate** - Optimización de la Respuesta de Rescate: Tras el impacto, una IA podría haber analizado los datos del barco y del mar circundante para coordinar la respuesta de rescate de manera más eficiente, enviando señales de socorro automáticas a las embarcaciones más cercanas y calculando rutas óptimas para que llegaran más rápido.\n",
+    "\n",
+    "Este contexto nos sirve como una introducción a la utilidad de la ciencia de datos y la inteligencia artificial en la resolución de problemas del mundo real, incluso aquellos de gran magnitud y complejidad. A través de este ejemplo, los participantes del bootcamp pueden apreciar la relevancia y el impacto potencial de lo que estamos a punto de aprender."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5af480b3",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/RMS_Titanic_3.jpg/1920px-RMS_Titanic_3.jpg' width=\"750\" height=\"250\" />\n",
+    "<figcaption></figcaption></center>\n",
+    "</figure>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ed53cf1",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: #007BFF; font-size: 24px; font-weight: bold; border: 2px solid #007BFF; padding: 10px; background-color: #EFEFEF; display: block; width: 100%;\"> Visualización y entendimiento de los datos </span>\n",
+    "\n",
+    "La visualización de datos es una herramienta esencial en la ciencia de datos que permite transformar datos complejos en representaciones visuales fáciles de interpretar. A través de gráficos, diagramas y otros elementos visuales, es posible identificar patrones, tendencias, y relaciones en los datos que de otra manera podrían pasar desapercibidos.\n",
+    "\n",
+    "En el contexto de la clasificación binaria, como en el caso de los sobrevivientes del Titanic, la visualización de datos juega un papel crucial. Al analizar datos de pasajeros como edad, género, clase de boleto, y su estado de supervivencia, las visualizaciones permiten descubrir rápidamente cuáles de estos factores influyeron más en la probabilidad de sobrevivir. Por ejemplo, un gráfico de barras puede mostrar de manera clara cómo la tasa de supervivencia varía según la clase de boleto o el género."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f558e191",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -33,9 +74,7 @@
     },
     "tags": []
    },
-   "source": [
-    "<span style=\"color: #007BFF; font-size: 24px; font-weight: bold; border: 2px solid #007BFF; padding: 10px; background-color: #EFEFEF; display: block; width: 100%;\">➡️ Import Libraries</span>"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
