--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color: #007BFF; font-size: 24px; font-weight: bold;\"> Bootcamp Data Science & Analítica de Datos - TITANIC </span>\n",
+    "# <span style=\"color: #007BFF; font-size: 24px; font-weight: bold;\"> Bootcamp Data Science & Analítica de Datos - RMS TITANIC </span>\n",
     "<div style=\"font-family: 'Arial', sans-serif; font-size: 16px; line-height: 1.6; color: #333;\">\n",
     "\n",
-    "Hundimiento del Titanic - 1912. Este desastre marítimo es un ejemplo clásico que ha sido ampliamente estudiado para entender cómo diversos factores contribuyeron a la probabilidad de supervivencia de las personas a bordo. El Titanic era un lujoso transatlántico que se consideraba \"insumergible\", pero se hundió en su viaje inaugural después de chocar con un iceberg en el Atlántico Norte. De los 2,224 pasajeros y tripulantes a bordo, solo 706 sobrevivieron.\n",
+    "\"El ****[RMS Titanic](https://es.wikipedia.org/wiki/RMS_Titanic)**** fue un transatlántico británico, el mayor barco de pasajeros del mundo al finalizar su construcción, naufragó en las aguas del océano Atlántico durante la noche del 14 y la madrugada del 15 de abril de 1912, mientras realizaba su viaje inaugural desde Southampton a Nueva York, tras chocar con un iceberg. En el hundimiento murieron 1496 personas de las 2208 que iban a bordo, lo que convierte a esta catástrofe en uno de los naufragios más mortales de la historia ocurridos en tiempos de paz.\"\n",
+    "\n",
+    "Este desastre marítimo es un ejemplo clásico que ha sido ampliamente estudiado para entender cómo diversos factores contribuyeron a la probabilidad de supervivencia de las personas a bordo. El Titanic era un lujoso transatlántico que se consideraba \"insumergible\", pero se hundió en su viaje inaugural después de chocar con un iceberg en el Atlántico Norte. De los 2,224 pasajeros y tripulantes a bordo, solo 706 sobrevivieron.\n",
     "\n",
     "**¿Cómo podría haber ayudado la IA?**\n",
     "\n",
@@ -31,7 +33,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/RMS_Titanic_3.jpg/1920px-RMS_Titanic_3.jpg' width=\"750\" height=\"250\" />\n",
+    "<img src='https://i0.wp.com/imgs.hipertextual.com/wp-content/uploads/2023/02/Titanic-Cast-Reacts-to-Movie-End.jpg?w=1958&quality=55&strip=all&ssl=1' width=\"750\" height=\"550\" />\n",
     "<figcaption></figcaption></center>\n",
     "</figure>"
    ]
