--- a/notebooks/clasificacion.ipynb
+++ b/notebooks/clasificacion.ipynb
@@ -20,11 +20,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<figure>\n",
-    "<center>\n",
-    "<img src='https://raw.githubusercontent.com/jofepe16/Template-Bootcamp/main/data/Images/titanic_classification.png' width=\"750\" height=\"550\" />\n",
-    "<figcaption></figcaption></center>\n",
-    "</figure>"
+    "\n",
+    "![titanic_end](https://raw.githubusercontent.com/jofepe16/Template-Bootcamp/main/data/Images/titanic_classification.png)\n"
    ]
   },
   {
